[package]
name = "podcast-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youtube_dl = {version = "0.9.0", features = ["downloader-rustls-tls", "tokio"]}
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "process", "time", "fs", "macros"] }
